Use URI.create(newUrl).toURL() in UpdateService redirect handler